# Generated by Django 6.0.8 on 2026-09-13 13:52

import uuid

import django.utils.timezone
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='ApprovalDecision',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('decision', models.CharField(choices=[('APPROVED', 'Disetujui'), ('REJECTED', 'Ditolak')], max_length=16)),
                ('reason', models.TextField(blank=True, null=True)),
                ('submission_hash', models.CharField(max_length=64)),
                ('decided_at', models.DateTimeField(default=django.utils.timezone.now)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'db_table': 'approval_approval_decision',
                'ordering': ('-decided_at', '-id'),
            },
        ),
    ]
