# Generated by Django 6.0.8 on 2026-09-13 13:16

import uuid

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('tender', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='OptimizationRun',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('status', models.CharField(choices=[('PENDING', 'Menunggu'), ('RUNNING', 'Berjalan'), ('COMPLETED', 'Selesai'), ('FAILED', 'Gagal')], default='PENDING', max_length=20)),
                ('algorithm_version', models.CharField(max_length=32)),
                ('snapshot_schema_version', models.PositiveIntegerField()),
                ('input_snapshot', models.JSONField()),
                ('input_hash', models.CharField(max_length=64)),
                ('result_count', models.PositiveIntegerField(default=0)),
                ('safe_error_code', models.CharField(blank=True, max_length=64, null=True)),
                ('safe_error_message', models.TextField(blank=True, null=True)),
                ('diagnostic_reference', models.CharField(blank=True, max_length=100, null=True)),
                ('started_at', models.DateTimeField(blank=True, null=True)),
                ('completed_at', models.DateTimeField(blank=True, null=True)),
                ('version', models.PositiveIntegerField(default=1)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('requested_by', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='requested_optimization_runs', to=settings.AUTH_USER_MODEL)),
                ('retry_of_run', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.PROTECT, related_name='retry_runs', to='optimization.optimizationrun')),
                ('tender_request', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='optimization_runs', to='tender.tenderrequest')),
                ('tender_revision', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='optimization_runs', to='tender.tenderrequestrevision')),
            ],
            options={
                'db_table': 'optimization_optimization_run',
                'ordering': ('-created_at', '-id'),
            },
        ),
        migrations.CreateModel(
            name='OptimizationCandidateRejection',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('candidate_identifier', models.CharField(max_length=128)),
                ('reason_code', models.CharField(max_length=64)),
                ('safe_detail', models.JSONField(default=dict)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('optimization_run', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='candidate_rejections', to='optimization.optimizationrun')),
            ],
            options={
                'db_table': 'optimization_candidate_rejection',
                'ordering': ('created_at', 'id'),
            },
        ),
        migrations.AddIndex(
            model_name='optimizationrun',
            index=models.Index(fields=['tender_request', '-created_at'], name='opt_run_tender_created_idx'),
        ),
        migrations.AddIndex(
            model_name='optimizationrun',
            index=models.Index(fields=['status', 'created_at'], name='opt_run_status_created_idx'),
        ),
        migrations.AddConstraint(
            model_name='optimizationrun',
            constraint=models.UniqueConstraint(condition=models.Q(('status__in', ('PENDING', 'RUNNING'))), fields=('tender_request',), name='optimization_one_active_run_per_tender'),
        ),
        migrations.AddConstraint(
            model_name='optimizationrun',
            constraint=models.CheckConstraint(condition=models.Q(('snapshot_schema_version__gt', 0)), name='optimization_snapshot_schema_positive'),
        ),
        migrations.AddConstraint(
            model_name='optimizationrun',
            constraint=models.CheckConstraint(condition=models.Q(('version__gt', 0)), name='optimization_run_version_positive'),
        ),
        migrations.AddConstraint(
            model_name='optimizationrun',
            constraint=models.CheckConstraint(condition=models.Q(models.Q(('completed_at__isnull', True), ('diagnostic_reference__isnull', True), ('result_count', 0), ('safe_error_code__isnull', True), ('safe_error_message__isnull', True), ('started_at__isnull', True), ('status', 'PENDING')), models.Q(('completed_at__isnull', True), ('diagnostic_reference__isnull', True), ('result_count', 0), ('safe_error_code__isnull', True), ('safe_error_message__isnull', True), ('started_at__isnull', False), ('status', 'RUNNING')), models.Q(('completed_at__isnull', False), ('diagnostic_reference__isnull', True), ('safe_error_code__isnull', True), ('safe_error_message__isnull', True), ('started_at__isnull', False), ('status', 'COMPLETED')), models.Q(('completed_at__isnull', False), ('diagnostic_reference__isnull', False), ('result_count', 0), ('safe_error_code__isnull', False), ('safe_error_message__isnull', False), ('started_at__isnull', False), ('status', 'FAILED')), _connector='OR'), name='optimization_run_state_payload_valid'),
        ),
        migrations.AddConstraint(
            model_name='optimizationcandidaterejection',
            constraint=models.UniqueConstraint(fields=('optimization_run', 'candidate_identifier'), name='optimization_rejection_candidate_unique'),
        ),
    ]
